--- a/style/nft_art_style.css
+++ b/style/nft_art_style.css
@@ -36,9 +36,7 @@ body{
 .logo__content{
 	width: 32px;
 	height: 32px;
-	background: linear-gradient(135deg, #FF00B8 7.81%, #FF005C 100%);
-	border-radius: 10px;
-	mix-blend-mode: normal;
+	
 }
 .site__title{
 	margin-top: 6px;
@@ -160,7 +158,7 @@ body{
 
 	padding-top: 105px;
 	background: #24252D;
-	height: 2725px;
+	height: auto;
 
 }
 .container__front{
@@ -218,15 +216,17 @@ body{
 }
 
 .first__phone{
+	z-index: 2;
 	
-	margin-left: 23px;
+	margin-left: 33px;
 	position: absolute;
+	filter: drop-shadow(50px 50px 50px rgba(0, 0, 0, 0.57));
 }
 .second__phone{
 	
 	margin-left: 214px;
-	z-index: 2;
 	position: absolute;
+	filter: drop-shadow(50px 50px 50px rgba(0, 0, 0, 0.57));
 }
 .more{
 	margin-top: 82px;
@@ -238,16 +238,17 @@ body{
 .more__btn{
 	justify-content: center;
 	align-items: center;
+	padding: 17px 17px 10px 17px;
+	background: #000000;
+	box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.3);
+	border-radius: 38px;
+	cursor: pointer;
 }
 .btn__play{
 	justify-content: center;
 	align-items: center;
 
-	padding: 17px 17px 17px 17px;
-	background: #000000;
-	box-shadow: 30px 30px 50px rgba(0, 0, 0, 0.3);
-	border-radius: 38px;
-	cursor: pointer;
+	
 }
 
 .more__info{
@@ -265,7 +266,7 @@ body{
 }
 
 .sell{
-	margin-top: 40px;
+	margin-top: 123px;
 	display: flex;
 	position: relative;
 	justify-content: center;
@@ -295,6 +296,7 @@ body{
 }
 
 .sell__info{
+	margin-top: 20px;
 	font-family: poppins;
 	font-style: normal;
 	font-weight: 500;
@@ -307,6 +309,349 @@ body{
 
 	color: #FFFFFF;
 }
+
+.sell_items{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+.sell_item{
+	margin-top: 49px;
+	margin-left: 25px;
+
+	position: relative;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	width: 213px;
+	height: 280px;
+
+	background: #202128;
+	border-radius: 20px;
+}
+.sell_item:first-child{
+	margin-left: 0;
+}
+.sell__number{
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin: 20px 0 0 16px;
+	background: linear-gradient(135deg, #FF00B8 7.81%, #FF005C 100%);
+	mix-blend-mode: normal;
+	border-radius: 10px;
+	padding: 11px 11px;
+}
+
+.number__vaule{
+	font-family: poppins;
+	font-style: normal;
+	font-weight: 800;
+	font-size: 16px;
+	line-height: 19px;
+	/* identical to box height */
+
+	letter-spacing: 0.02em;
+
+	color: #FFFFFF;
+}
+
+.who__sellers{
+	margin-top: 57px;
+	position: relative;
+}
+.photo__sellers{
+
+}
+.confirm__sellers{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	background: #00B347;
+	border-radius: 50%;
+	padding: 5px 8px;
+}
+.verif__sellers{
+	height: 10px;
+	width: 14px;
+}
+.sellers__name{
+	margin-top: 32px;
+	font-family: poppins;
+	font-style: normal;
+	font-weight: 800;
+	font-size: 18px;
+	line-height: 21px;
+	text-align: center;
+	letter-spacing: 0.02em;
+	color: #FFFFFF;
+}
+
+.sellers__vaule{
+	margin-top: 10px;
+	font-family: poppins;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 21px;
+	text-align: center;
+	letter-spacing: 0.02em;
+	color: #FFFFFF;
+
+}
+.bids{
+	margin-top: 105px;
+}
+.bids__headline{
+	font-family: poppins;
+	font-style: normal;
+	font-weight: 800;
+	font-size: 36px;
+	line-height: 42px;
+	text-align: center;
+	letter-spacing: 0.02em;
+	background-image: linear-gradient(93.8deg, #FF00AE 1.02%, #FF0066 92.85%);
+	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;
+}
+.bids__info{
+	margin-top: 20px;
+	font-family: poppins;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 30px;
+	/* or 167% */
+
+	text-align: center;
+	letter-spacing: 0.02em;
+
+	color: #FFFFFF;
+}
+
+.bids__items{
+	margin-top: 20px;
+	display: flex;
+	flex-wrap: wrap;
+}	
+
+.bids__item{
+	margin-top: 47px;
+	margin-left: 25px;
+	width: 275px;
+	height: 428px;
+	background: #202128;
+	border-radius: 40px;
+}
+.bids__item:first-child{
+	margin-left: 0;
+}
+.bids__item:nth-child(5n){
+	margin-left: 0;
+}
+.five__bids{
+	margin-left: 0;
+}
+.item__picture{
+	margin: 25px 0 0 20px;
+	border-radius: 30px;
+}
+
+.bids__item__info{
+	display: flex;
+}
+.bids__name{
+	margin: 10px 0 0 22px;
+	font-family: poppins;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 21px;
+	letter-spacing: 0.02em;
+	color: #FFFFFF;
+}
+.bids__vaule{
+	margin: 10px 0 0 22px;
+	font-family: poppins;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 21px;
+	letter-spacing: 0.02em;
+	color: #FFFFFF;
+}
+.nft__bids__info{
+	width: 50%;
+}
+.bids__item__picture{
+	width: 50%;
+}
+.bids__btn{
+	display: flex;
+	margin-top: 84px;
+	margin-bottom: 120px;
+	position: relative;
+	align-items: center;
+	justify-content: center;
+}
+.btn__bids{
+	margin-left: 0;
+	padding: 16px 121px;
+}
+.footer{
+	margin-top: 105px;
+	border-top: 1px solid #323238;
+	background: #24252D;
+	padding-bottom: 30px;
+}
+
+.footer__main{
+	margin-top: 53px;
+}
+
+
+
+
+
+
+.footer__main{
+	display: flex;
+	flex-wrap: wrap;
+}
+.mail{
+	margin-left: 120px;
+}
+.main__logo{
+	width: 32px;
+	height: 32px;
+	padding: 6px 6px 6px 7px;
+	background: linear-gradient(135deg, #FF00B8 7.81%, #FF005C 100%);
+	mix-blend-mode: normal;
+	border-radius: 10px;
+}
+.logo__footer{
+	display: flex;
+}
+.footer__main__info{
+	margin-top: 42px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 24px;
+	color: #FFFFFF;
+}
+.footer__form{
+	margin-top: 25px;
+}
+.mail__form{
+	width: 283px;
+	height: 40px;
+	background: #1B1A21;
+	border-radius: 10px;
+	border: none;
+
+}
+.mail__btn{
+	margin-left: -25px;
+	border: none;
+	padding: 10px 25px;
+	background: linear-gradient(101.12deg, #EB1484 27.35%, #C91CC3 99.99%, #C81CC5 100%, #C81CC5 100%);
+	border-radius: 10px;
+
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 21px;
+
+	color: #FFFFFF;
+	cursor: pointer;
+	transition: .2s;
+}
+.mail__btn:hover{
+	background: linear-gradient(101.12deg,  #C81CC5 27%, #C81CC5 99%,#EB1484 100%, #C91CC3 100%);
+}
+.main__footer__info__btn{
+	margin-left: 135px;
+	display: flex;
+	flex-direction: column;
+}
+.main__foter_first{
+	margin-left: 157px;
+}
+
+.footer__headliner{
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 30px;
+
+	color: #FFFFFF;
+	margin-bottom: 12px;
+	text-decoration: none;
+	
+	transition: .2s;
+
+}
+
+.nft__atr__info{
+	margin-top: 12px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 26px;
+	font-feature-settings: 'salt' on, 'liga' off;
+	color: #FFFFFF;
+	text-decoration: none;
+	opacity: .7;
+	transition: .2s;
+
+}
+.nft__atr__info:hover{
+	opacity: 1;
+}
+.social__fotter{
+	position: relative;
+	display: flex;
+	margin-top: 106px;
+	margin: 106px 120px 0 120px;
+}
+.site__info{
+
+}
+.site__info__name{
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 24px;
+	color: #FFFFFF;
+}
+.social{
+	position: absolute;
+	display: flex;
+	flex-wrap: wrap;
+	right: 0;
+	bottom: 0;
+}
+.social__items{
+	margin-left: 22px;
+
+}
+.social__icons{
+	height: 25px;
+	width: 27px;
+	cursor: pointer;
+}
+.social__icons:first-child{
+	width: 25px;
+	margin-left: 0;
+}
+
+
 
 
 
