--- a/style/nft_art_style.css
+++ b/style/nft_art_style.css
@@ -24,10 +24,16 @@ body{
 	background: #24252D;
 	border-bottom: 1px solid #323238;
 }
+.header__none{
+	display: none;
+}
 
 .header__container{
 	display: flex;
 	align-items: center;
+}
+.header__search{
+	display: none;
 }
 .site__name{
 	display: flex;
@@ -87,6 +93,65 @@ body{
 
 	color: #FFFFFF;
 }
+.search__wind{
+	width: 100%;
+	height: 70px;
+	background: #202128;
+	z-index: 10;
+	position: fixed;
+	display: flex;
+	position: relative;
+	justify-content: center;
+	align-items: center;
+	display: none;
+	flex-direction: column;
+	padding: 10px 40px;
+	border-bottom: 1px solid #323238;
+	transition: .25s;
+}
+.search__mob{
+	display: fixed;
+	width: 100%;
+	z-index: 100;
+}
+.search__active__mob{
+	position: fixed;
+	display: block;
+	margin: 0;
+}
+.search__mobile{
+	margin-top: 5px;
+	padding-left: 10px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 16px;
+	letter-spacing: 0.02em;
+
+	color: #FFFFFF;
+
+	border: none;
+	width: 350px;
+	height: 40px;
+	left: calc(50% - 550px/2 - 231.75px);
+	top: calc(50% - 40px/2 - 11px);
+
+	background: #1B1A21;
+	border-radius: 10px;*
+	opacity: .7;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .menu{
 	display: flex;
@@ -772,7 +837,163 @@ body{
 
 
 
+/*BUERGER MENU----------------------------------------------*/
+/*BUERGER MENU----------------------------------------------*/
+/*BUERGER MENU----------------------------------------------*/
+/*BUERGER MENU----------------------------------------------*/
+/*BUERGER MENU----------------------------------------------*/
+.hamburger-menu{
+	display: none;
+}
+.burger__btn{
+	text-decoration: none;
+	padding: 10px 38px;
 
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 19px;
+	
+
+	color: #FF00B8;
+	
+	cursor: pointer;
+
+
+	border: 1px solid #FF00B8 ;
+	
+	border-radius: 8px;
+	transition: .2s;
+	margin: 24px 24px 0 24px;
+
+	
+}
+.burger__btn:last-child{
+	padding: 10px 31px;
+}
+.burger__btn:hover{
+	background: linear-gradient(135deg, #FF00B8 7.81%, #FF005C 100%);
+
+	color: #fff;
+	-webkit-background-clip: none;
+	-webkit-text-fill-color: none;
+}
+.btn__box{
+	display: flex;
+	flex-wrap: wrap;
+
+}
+
+
+
+
+
+
+#menu__burger {
+  opacity: 0;
+}
+
+#menu__burger:checked ~ .menu__btn__burger > span {
+  transform: rotate(45deg);
+}
+#menu__burger:checked ~ .menu__btn__burger > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__burger:checked ~ .menu__btn__burger > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__burger:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
+}
+
+.menu__btn__burger {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+
+  width: 26px;
+  height: 26px;
+
+  cursor: pointer;
+  z-index: 1;
+}
+
+.menu__btn__burger > span,
+.menu__btn__burger > span::before,
+.menu__btn__burger > span::after {
+  display: block;
+  position: absolute;
+
+  width: 100%;
+  height: 2px;
+
+  background-color: #616161;
+
+  transition-duration: .25s;
+}
+.menu__btn__burger > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn__burger > span::after {
+  content: '';
+  top: 8px;
+}
+
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+
+  width: 300px;
+  height: 100%;
+
+  margin: 0;
+  padding: 80px 0;
+
+  list-style: none;
+
+  background-color: #24252D;
+  box-shadow: 10px 0px 90px rgba(0, 0, 0, .7);
+
+  transition-duration: .25s;
+}
+
+.menu__item {
+	display: block;
+	padding: 12px 24px;
+
+  	text-decoration: none;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 19px;
+
+	letter-spacing: 0.02em;
+
+	color: #FFFFFF;
+	opacity: 0.7;
+
+  	transition-duration: .25s;
+}
+.menu__item:hover {
+  color: #EB1484 ;
+}
+
+/*BUERGER MENU----------------------------------------------*/
+/*BUERGER MENU----------------------------------------------*/
+/*BUERGER MENU----------------------------------------------*/
+/*BUERGER MENU----------------------------------------------*/
+/*BUERGER MENU----------------------------------------------*/
 
 
 
@@ -1163,11 +1384,45 @@ body{
 
 
 @media(max-width: 425px){
-	.header{
-		width: 100%;
-		position: fixed;
-		z-index: 50;
-		background: #202128;
+	.header__search{
+		position: absolute;
+		right: 0;
+		margin-right: 20px;
+		justify-content: center;
+		align-items: center;
+		display: block;
+	}
+	#header__search{
+		fill: #616161;
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	.hamburger-menu{
+		display: block;
 	}
 	.container{
 		margin: 0 0;
@@ -1179,8 +1434,17 @@ body{
 		margin: 0 0;
 		padding: 0 5px;
 	}
+	.header{
+		height: 70px;
+		width: 100%;
+		position: fixed;
+		align-items: center;
+		justify-content: center;
+		z-index: 4;
+		background: #202128;
+	}
 	.site__name{
-		margin: 0 0 0 15px;
+		margin: 0 0 0 20px;
 	}
 	.site__title{
 		margin-left: 10px;
@@ -1188,13 +1452,24 @@ body{
 	.menu{
 		display: none;
 	}
+
+
+
+
+
+
+
 	.menu__btn{
+		display: none;
+	}
+	.search{
 		display: none;
 	}
 	.search__form{
 		width: 200px;
 		margin: 0 10px;
 	}
+
 	.veiw__front{
 		padding-top: 15px;
 		text-align: center;
@@ -1222,10 +1497,13 @@ body{
 		margin-top: 25px;
 		justify-content: center;
 		align-items: center;
-		margin-left: 45px;
+		margin-left: 0;
 	}
 	.more{
 		margin-top: 45px;
+		margin-left: 0;
+	}
+	.more__info{
 		margin-left: 10px;
 	}
 	.sell{
