--- a/style/nft_art_style.css
+++ b/style/nft_art_style.css
@@ -100,28 +100,27 @@ body{
 	z-index: 10;
 	position: fixed;
 	display: flex;
+	flex-wrap: wrap;
 	position: relative;
 	justify-content: center;
 	align-items: center;
 	display: none;
 	flex-direction: column;
-	padding: 10px 40px;
+	padding: 10px 20px;
 	border-bottom: 1px solid #323238;
 	transition: .25s;
 }
 .search__mob{
 	display: fixed;
-	width: 100%;
 	z-index: 100;
+	margin-right: 10px;
 }
 .search__active__mob{
 	position: fixed;
-	display: block;
-	margin: 0;
+	display: flex;
+	top: 0;
 }
 .search__mobile{
-	margin-top: 5px;
-	padding-left: 10px;
 	font-family: Poppins;
 	font-style: normal;
 	font-weight: normal;
@@ -130,7 +129,7 @@ body{
 	letter-spacing: 0.02em;
 
 	color: #FFFFFF;
-
+	padding-left: 15px;
 	border: none;
 	width: 350px;
 	height: 40px;
@@ -141,7 +140,34 @@ body{
 	border-radius: 10px;*
 	opacity: .7;
 }
+.close__search{
+	z-index: 20;
+	right: 0;
+	top: 0;
+	width: 26px ;
+	height: 26px;
+	margin: 0 0 5px 10px;
+}
+.close__btn::after{
+	transform: rotate(45deg);
 
+	display: block;
+	position: absolute;
+	content: '';
+	width: 2px;
+	height: 30px;
+	background-color: #616161;
+}
+.close__btn::before{
+	transform: rotate(-45deg);
+
+	display: block;
+	position: absolute;
+	content: '';
+	width: 2px;
+	height: 30px;
+	background-color: #616161;
+}
 
 
 
@@ -1359,6 +1385,7 @@ body{
 	.social{
 		margin-left: 60px;
 		margin-top: 20px;
+		margin-right: 20px;
 		position: absolute;
 		right: 0;
 		bottom: 0;
@@ -1395,28 +1422,6 @@ body{
 	#header__search{
 		fill: #616161;
 	}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1548,7 +1553,9 @@ body{
 		height: auto;
 	}
 	.bids__item:hover{
-		transform: none;
+		width: auto;
+		height: auto;
+		transform: scale(1.2);
 	}
 	.intro__btn__items{
 		margin-bottom: 25px;
@@ -1634,6 +1641,9 @@ body{
 
 
 @media(max-width: 375px){
+	.search__mobile{
+		width: 305px;
+	}
 	.intro__btn__items{
 		margin: 30px 0 0 0 ;
 	}
