--- a/style/nft_art_style.css
+++ b/style/nft_art_style.css
@@ -299,7 +299,71 @@ body{
 .intro__left__side{
 	width: 55%;
 }
+
+.dots{
+	margin-left: 230px;
+	z-index: 2;
+
+	position: relative;
+	display:flex;
+	transition: 3s;
+	transform: rotate(360deg);
+	animation: 15s linear 0s normal none infinite running animate;
+  -webkit-animation: 15s linear 0s normal none infinite running animate;
+
+}
+.dotsss{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transform: rotate(calc(36deg * var(--i)));
+
+}
+.dotsss:before{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 25px;
+	height: 25px;
+	background: transparent;
+	border-radius: 50%;
+	box-sizing: border-box;
+
+	box-shadow:
+	-60px -12px 0 #00efff,
+	-50px -24px 20px #00efff,
+	30px 96px 0 #00efff,
+	48px 24px 20px #00efff,
+	48px -12px 0 #00efff,
+	12px -96px 20px #00efff,
+	-40px 60px 0 #00efff,
+	-12px 96px 20px #00efff;
+
+	animation: 8s linear 0s normal none infinite running animate;
+  -webkit-animation: 8s linear 0s normal none infinite running animate;
+	/*animation: animate 5s liner infinite;*/
+	animation-delay: calc(-0.25s * var(--i));
+	transform-origin: 10px;
+
+}
+
+@keyframes animate{
+	0%{
+		transform: rotate(0deg);
+		filter: hue-rotate(0deg);
+	}
+	100%{
+		transform: rotate(360deg);
+		filter: hue-rotate(360deg);
+	}
+}
+
+
 .intro_phone{
+	display: flex;
 	position: relative;
 	width: 44%;
 }
@@ -309,14 +373,15 @@ body{
 }
 
 .first__phone{
-	z-index: 2;
+	z-index: 3;
 	
 	margin-left: 33px;
 	position: absolute;
 	filter: drop-shadow(50px 50px 50px rgba(0, 0, 0, 0.57));
 }
 .second__phone{
-	
+	z-index: 1;
+
 	margin-left: 214px;
 	position: absolute;
 	filter: drop-shadow(50px 50px 50px rgba(0, 0, 0, 0.57));
@@ -702,6 +767,7 @@ body{
 	background: linear-gradient(135deg, #FF00B8 7.81%, #FF005C 100%);
 	mix-blend-mode: normal;
 	border-radius: 10px;
+
 }
 .logo__footer{
 	display: flex;
